--- a/public/scss/bootstrap.scss
+++ b/public/scss/bootstrap.scss
@@ -1,6 +1,6 @@
 /******* Customized Bootstrap ********/
 
-$primary: #2b3d76;
+$primary: #253e77;
 $secondary: #edc326;
 $light: #F6F4F9;
 $dark: #04000B;
